# doodba

./: 11.0.Dockerfile  12.0.Dockerfile  13.0.Dockerfile  14.0.Dockerfile  15.0.Dockerfile  16.0.Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
conf.d/: 40-smtp.conf
tests/: __init__.py
tests/scaffoldings/addons_env/: Dockerfile
tests/scaffoldings/addons_env_ou/custom/src/: addons.yaml
tests/scaffoldings/dotd/: docker-compose.yaml
tests/scaffoldings/dotd/custom/dependencies/: pip.txt
tests/scaffoldings/geoip_devel/: docker-compose.yaml
