[tool.poetry]
name = "doodba"
version = "0.0.0"
description = "Docker Odoo Base, a highly opinionated image ready to put Odoo inside it, but without Odoo"
authors = ["Tecnativa"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"

[tool.poetry.dev-dependencies]
plumbum = "^1.6.9"
pre-commit = "^2.9.3"
pyyaml="^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
